ajout de class dans le html, correction du l'alignement des section, ajout des bordure pour le h3

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  max-width: 320px;
+  max-width: 375px;
   margin: auto;
   background: #000;
   color: #fff;
@@ -27,30 +27,52 @@ h2 {
   border-width: 0 0 4px 0;
   border-color: rgba(110, 240, 255, 0.5);
   padding-left: 6px;
-  margin: 0;
+  margin: 20px 0 30px 20px;
 }
 
 h3 {
   color: #abd5f4;
-  border-width: 0 0 4px 0;
-  border-style: solid;
-  border-color: rgba(110, 240, 255, 0.5);
   display: inline-block;
-  margin: 0 0 20px 0;
+  margin: 0 30px 20px 30px;
   font-family: "source-sans-3-variable", sans-serif;
   font-weight: 800;
+}
+
+.border-bottom {
+  position: relative;
+}
+
+.border-bottom::after {
+  content: "";
+  width: 50%;
+  height: 4px;
+  background: rgba(110, 240, 255, 0.5);
+  position: absolute;
+  bottom: 20px;
+  left: 30px  ;
 }
 
 p {
   font-family: "source-sans-3-variable", sans-serif;
   font-weight: 400;
   font-size: 18px;
-  margin: 0 0 30px 0;
+  margin: 0 30px 30px 30px;
+}
+
+.section p:last-of-type{
+  margin: 0 30px 20px 30px;
 }
 
 .up {
   max-width: 45px;
   position: sticky;
-  bottom: 20px;
+  bottom: 220px;
+  left: 10px;
 }
 
+.section {
+  margin-left: 30px;
+  border-style: solid;
+  border-width: 0 0 0 4px;
+  border-image: linear-gradient(#6ef0ff, rgba(0, 0, 0, 0)) 1 100%;
+}
